tests/ui/type/pattern_types/const_block.stderr
error[E0391]: cycle detected when evaluating type-level constant
  --> $DIR/const_block.rs:7:36
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                    ^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `bar::{constant#2}`...
  --> $DIR/const_block.rs:7:36
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                    ^^^^^^^^^^^^^^
note: ...which requires caching mir of `bar::{constant#2}` for CTFE...
  --> $DIR/const_block.rs:7:36
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                    ^^^^^^^^^^^^^^
note: ...which requires elaborating drops for `bar::{constant#2}`...
  --> $DIR/const_block.rs:7:36
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                    ^^^^^^^^^^^^^^
note: ...which requires borrow-checking `bar::{constant#2}`...
  --> $DIR/const_block.rs:7:36
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                    ^^^^^^^^^^^^^^
note: ...which requires borrow-checking `bar::{constant#0}`...
  --> $DIR/const_block.rs:7:41
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                         ^^^^^^^^^
note: ...which requires promoting constants in MIR for `bar::{constant#0}`...
  --> $DIR/const_block.rs:7:41
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                         ^^^^^^^^^
note: ...which requires const checking `bar::{constant#0}`...
  --> $DIR/const_block.rs:7:41
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                         ^^^^^^^^^
note: ...which requires building MIR for `bar::{constant#0}`...
  --> $DIR/const_block.rs:7:41
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                         ^^^^^^^^^
note: ...which requires match-checking `bar::{constant#0}`...
  --> $DIR/const_block.rs:7:41
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                         ^^^^^^^^^
note: ...which requires type-checking `bar::{constant#0}`...
  --> $DIR/const_block.rs:7:41
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   |                                         ^^^^^^^^^
note: ...which requires type-checking `bar`...
  --> $DIR/const_block.rs:7:1
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires evaluating type-level constant, completing the cycle
note: cycle used when checking that `bar` is well-formed
  --> $DIR/const_block.rs:7:1
   |
LL | fn bar(x: pattern_type!(u32 is 0..=const{ 5 + 5 })) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
